pause missing stuff

--- a/index.qmd
+++ b/index.qmd
@@ -29,7 +29,7 @@ due on Sundays.
 
 ::: column-screen-inset-right
 |                    Module                    | Date                | Skills                       | Packages                                                     | Functions                                                                                                                                                                           |                                      Readings                                       |                                  Reference                                  | Videos                                                                                                                                                      |                           Assignments                           |
-|:--------------------------------------------:|---------------------|------------------------------|--------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------------:|:---------------------------------------------------------------------------:|-------------------------------------------------------------------------------------------------------------------------------------------------------------|:---------------------------------------------------------------:|
+|:------:|--------|--------|--------|--------|:------:|:------:|--------|:------:|
 | [1.1](/modules/module-1.1.html "Module 1.1") | `r advdate(mon,0)`  | Read data into R             | `readr`, `dplyr`                                             | `read_csv()`, `glimpse()`                                                                                                                                                           |                                                                                     | [📖](https://r4ds.hadley.nz/data-import.html#introduction "r4ds 8.1 & 8.2") | [🖥️](https://youtu.be/YLOaKB8dfF4 "Downloading World Bank data")[🖥️](https://youtu.be/XOGXn8IiHK8 "Reading data from a flat file")                          |                                                                 |
 |                                              | `r advdate(tues,0)` | Reshape data                 | `tidyr`                                                      | `pivot_longer()`                                                                                                                                                                    |                                                                                     |        [📖](https://r4ds.hadley.nz/data-tidy.html "r4ds 6.1 & 6.3")         | [🖥️](https://youtu.be/ud36szsO9a4 "Reshaping data")                                                                                                         |                                                                 |
 |                                              | `r advdate(wed,0)`  | Clean data                   | `dplyr`                                                      | `mutate()`, `mutate_at()`, `substring()`                                                                                                                                            |    [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris")     |                                                                             | [🖥️](https://youtu.be/syG5cdmtXSo "Truncating strings, changing variable types")[🖥️](https://youtu.be/M-uuPBdBCTw "Cleaning variable names")                |                               📘                                |
@@ -60,10 +60,10 @@ due on Sundays.
 |   [5.2](/modules/module-5.2 "Module 5.2")    | `r advdate(thur,4)` | Line chart app setup         | `fredr`                                                      | `fredr_set_key()` , `as.Date()` , `Sys.Date()` ,                                                                                                                                    |                                                                                     |                                                                             | 🖥️                                                                                                                                                          |                                                                 |
 |                                              | `r advdate(fri,4)`  | Building the UI              | `shiny`                                                      | `column()`, `wellPanel()`, `helpText()`, `sliderInput()`                                                                                                                            |                                                                                     |                                                                             | 🖥️                                                                                                                                                          | [✍️](/project/project-assignment-2.html "Project assignment 2") |
 |                                              | `r advdate(sat,4)`  | Building the server          | `shiny`, `fredr`                                             | `reactive()`, `fredr()`, `fred_indicator()`                                                                                                                                         |                                                                                     |                                                                             | 🖥️                                                                                                                                                          |                              📘 🧮                              |
-| [6.1](/modules/module-6.1.html "Module 6.1") | `r advdate(mon,5)`  |                              |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                                          |                                                                 |
-|                                              | `r advdate(tues,5)` |                              |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             |                                                                                                                                                             |                                                                 |
-|                                              | `r advdate(wed,5)`  |                              |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             |                                                                                                                                                             |                                                                 |
-| [6.2](/modules/module-6.2.html "Module 6.2") | `r advdate(thur,5)` |                              |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                                          |                                                                 |
-|                                              | `r advdate(fri,5)`  |                              |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             |                                                                                                                                                             |                                                                 |
-|                                              | `r advdate(sat,5)`  |                              |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             |                                                                                                                                                             | [✍️](/project/project-assignment-3.html "Project assignment 3") |
+| [6.1](/modules/module-6.1.html "Module 6.1") | `r advdate(mon,5)`  | TBD                          |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                                          |                                                                 |
+|                                              | `r advdate(tues,5)` | TBD                          |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             |                                                                                                                                                             |                                                                 |
+|                                              | `r advdate(wed,5)`  | TBD                          |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             |                                                                                                                                                             |                                                                 |
+| [6.2](/modules/module-6.2.html "Module 6.2") | `r advdate(thur,5)` | TBD                          |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                                          |                                                                 |
+|                                              | `r advdate(fri,5)`  | TBD                          |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             |                                                                                                                                                             |                                                                 |
+|                                              | `r advdate(sat,5)`  | TBD                          |                                                              |                                                                                                                                                                                     |                                                                                     |                                                                             |                                                                                                                                                             | [✍️](/project/project-assignment-3.html "Project assignment 3") |
 :::
