add week 2 in weekly materials

--- a/weeks/week-1.qmd
+++ b/weeks/week-1.qmd
@@ -11,14 +11,18 @@ subtitle: Working with Data
 resources](/course-support.html)
 
 | 📖 r4ds
-- [8.1 & 8.2](https://r4ds.hadley.nz/data-import.html#introduction) on importing data
-- [6.1 - 6.3](https://r4ds.hadley.nz/data-tidy.html) on tidy data
-- [20.3](https://r4ds.hadley.nz/joins.html#sec-mutating-joins) on mutating joins
-- [4.5](https://r4ds.hadley.nz/data-transform.html#groups) on grouping data
-  
-### Social science reading 
+-   [8.1 & 8.2](https://r4ds.hadley.nz/data-import.html#introduction) on
+    importing data
+-   [6.1 - 6.3](https://r4ds.hadley.nz/data-tidy.html) on tidy data
+-   [20.3](https://r4ds.hadley.nz/joins.html#sec-mutating-joins) on
+    mutating joins
+-   [4.5](https://r4ds.hadley.nz/data-transform.html#groups) on grouping
+    data
 
-📖 Norris, [The Impact of Electoral Reform on Women's Representation](https://link-springer-com.proxygw.wrlc.org/article/10.1057/palgrave.ap.5500151)
+### Social science reading
+
+📖 Norris, [The Impact of Electoral Reform on Women's
+Representation](https://link-springer-com.proxygw.wrlc.org/article/10.1057/palgrave.ap.5500151)
 
 ## Modules
 
@@ -27,9 +31,6 @@ resources](/course-support.html)
 
 ## Assignments
 
-| 📘 Quiz 1
-| 📘 Quiz 2
+| [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Quiz 1") Quiz 1
+| [📘](https://blackboard.gwu.edu/ultra/courses/_387298_1/outline "Quiz 2") Quiz 2
 | 🧮 [Coding Assignment 1](/assignments/coding-assignment-1.html)
-
-
-  
