--- a/modules/module-2.1.qmd
+++ b/modules/module-2.1.qmd
@@ -16,7 +16,7 @@ execute:
 
 - Install the `scales` package (`install.packages("scales")`)
 - Have a look at the documentation for [ggplot2](https://ggplot2.tidyverse.org/)
-- Familiarize yourself with the `ggplot2` [cheatseet](file:///C:/Users/emman/Downloads/data-visualization-1.pdf)
+- Familiarize yourself with the `ggplot2` [cheatseet](https://posit.co/wp-content/uploads/2022/10/data-visualization-1.pdf)
 - Generate a quarto document named "module-2.1.qmd" in youe modules project folder so that you can code along with me
 
 If you have installed the Tidyverse, then you should already have the packages for this model, including `ggplot2`. You can go ahead and load `ggplot2` along with `readr` and `dplyr`. 
