update getting started

--- a/modules/getting-started.qmd
+++ b/modules/getting-started.qmd
@@ -60,9 +60,9 @@ One central concept you want to be familiar with is a *repository* or "repo" for
 
 GitHub repos are managed using a version control system named Git. Git allows developers to make and track changes to the code stored in the repo. Git also enables users to create branches to work on the code without affecting the main codebase and then merge those changes back into the main branch when they are ready.
 
-The first thing you are going to want to do is to [register](https://happygitwithr.com/github-acct.html) a GitHub account. From there, you want to [install Git](https://happygitwithr.com/install-git.html) and [initiate Git](https://happygitwithr.com/hello-git.html) using the `usethis` package.
+The first thing you are going to want to do is to [register](https://happygitwithr.com/github-acct.html) a GitHub account. From there, you want to [install Git](https://happygitwithr.com/install-git.html) and [initiate Git](https://happygitwithr.com/hello-git.html) using the [usethis](https://usethis.r-lib.org/) package. Be sure to install `usethis` first (`install.packages("usethis")` if you don't have it installed already).
 
-Next, you need to generate a personal access token [(PAT)](https://happygitwithr.com/https-pat.html) and set your credentials with the [gitcreds](https://gitcreds.r-lib.org/) package. This is pretty simple once you have your PAT. After loading `gitcreds`, you type `gitcreds_get()` to see whether you already have credentials setup. From there you type `gitcreds_set()` to enter your new credentials (your username and your password, which will be the PAT that you just generated). 
+Next, you need to generate a personal access token [(PAT)](https://happygitwithr.com/https-pat.html) and set your credentials with the [gitcreds](https://gitcreds.r-lib.org/) package. This is pretty simple once you have your PAT. After installing and loading `gitcreds` (`install.packages("gitcreds")`; `library(gitcreds)`), you can type `gitcreds_get()` to see whether you already have credentials set up. Then type `gitcreds_set()` to enter your new credentials (your username and your password, which will be the PAT that you just generated).
 
 Now, you can [create a GitHub repo](https://happygitwithr.com/rstudio-git-github.html) and clone it to your computer in RStudio. There a number of ways to clone a repo, but the recommended method for this course involves creating a new project in RStudio and selecting "Version Control" for the method (instead of "New Directory" as we did before). From there, select "Git", copy the URL from the green "Code" tab in the GitHub repo, and paste it into "Repository URL" field. Next, select the directory where you want the repository to be created and click "create project."
 
